--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti85:2.1": "Cercatori, meditate contemplando il non bello nel corpo. ",
   "iti85:2.2": "Lasciate prima di tutto che la consapevolezza (vigilanza) del respiro sia ben consolidata internamente ",
   "iti85:2.3": "e meditate osservando l’impersistenza/impermanenza (CHANGE anicca everywhere to non persistente) di ogni condizione (cosa / UPDATE EVERY TRANSLATION condizione or creazione). ",
-  "iti85:2.4": "Se si contempla il non bello (la bruttezza) nel corpo, qualunque tendenza latente verso la passione per la bellezza verrà abbandonata. ",
+  "iti85:2.4": "Se si contempla il non bello nel corpo, qualunque tendenza latente verso la passione per la bellezza verrà abbandonata. ",
   "iti85:2.5": "Se la consapevolezza del respiro sarà prima di tutto ben consolidata internamente, qualsiasi inclinazione verso pensieri problematici esterni cesserà di esistere. ",
   "iti85:2.6": "Se si contempla l’impersistenza/impermanenza di ogni attività (condizione/dinamica), l’ignoranza viene abbandonata e la sapienza sorge. ",
   "iti85:3.1": "Un cercatore, che con continuo ardore (zelo) contempla il non bello nel corpo ",
