--- a/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
@@ -17,7 +17,7 @@
   "iti90:6.1": "ha fede nel supremo Dhamma, ",
   "iti90:6.2": "nella fine della passione, nella calma, nella felicità, ",
   "iti90:6.3": "ha fede nel supremo Saṅgha, ",
-  "iti90:6.4": "nell’ineguagliabile campo di ricchezza spirituale* ",
+  "iti90:6.4": "nell’ineguagliabile campo di merito (ricchezza spirituale*) ",
   "iti90:7.1": "e fa offerte al supremo, ",
   "iti90:7.2": "questo accumula suprema ricchezza spirituale, ",
   "iti90:7.3": "superiore vita, bellezza, ",
