--- a/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
@@ -19,7 +19,7 @@
   "iti90:6.3": "ha fede nel supremo Saṅgha, ",
   "iti90:6.4": "nell’ineguagliabile campo di merito (ricchezza spirituale*) ",
   "iti90:7.1": "e fa offerte al supremo, ",
-  "iti90:7.2": "questo accumula suprema ricchezza spirituale, ",
+  "iti90:7.2": "questo accumula supremo merito (ricchezza spirituale), ",
   "iti90:7.3": "superiore vita, bellezza, ",
   "iti90:7.4": "nomea, reputazione, felicità e forza. ",
   "iti90:8.1": "Chi da al supremo ha buon giudizio / è giudizioso* ",
