--- a/translation/de/sabbamitta/sutta/kn/kp/kp9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/kp/kp9_translation-de-sabbamitta.json
@@ -3,7 +3,7 @@
   "kp9:0.2": "Die Lehrrede über die Liebe ",
   "kp9:1.1": "Die, die in der Bedeutung der Texte bewandert sind, ",
   "kp9:1.2": "sollten üben wie folgt, um den Zustand des Friedens zu verwirklichen: ",
-  "kp9:1.3": "Tüchtig seien sie und aufrecht, sehr aufrecht, ",
+  "kp9:1.3": "Tüchtig seien sie und aufrichtig, sehr aufrichtig, ",
   "kp9:1.4": "zugänglich, sanft und bescheiden. ",
   "kp9:2.1": "Zufrieden sollen sie sein und nicht zur Last fallen, ",
   "kp9:2.2": "nicht geschäftig; genügsam sollen sie leben, ",
