--- a/translation/de/sabbamitta/sutta/an/an5/an5.44_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.44_translation-de-sabbamitta.json
@@ -32,7 +32,7 @@
   "an5.44:7.8": "Da nahm es der Buddha aus Anteilnahme an. ",
   "an5.44:7.9": "Und da freute sich der Buddha mit Ugga und fasste seine Wertschätzung in diese Verse: ",
   "an5.44:8.1": "„Wer das Angenehme gibt, bekommt das Angenehme, ",
-  "an5.44:8.2": "wer begeistert den Menschen von aufrechtem Verhalten ",
+  "an5.44:8.2": "wer begeistert den Menschen von aufrichtigem Verhalten ",
   "an5.44:8.3": "Kleidung und Schlafstellen, Speise und Trank ",
   "an5.44:8.4": "und verschiedene andere Bedarfsgegenstände gibt. ",
   "an5.44:9.1": "Da er weiß, dass die Vollendeten wie ein Feld sind ",
