--- a/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti92:2.1": "“Cercatori, anche se un cercatore afferrando l’angolo del mio saio, mi seguisse standomi dietro passo dopo passo, ",
   "iti92:2.2": "se è smanioso... ",
   "iti92:2.3": "allora sarà lontano da me e io da esso. ",
-  "iti92:2.4": "Perchè questo? ",
+  "iti92:2.4": "Perché questo? ",
   "iti92:2.5": "Perchè quel cercatore non vede il Dhamma. ",
   "iti92:2.6": "E non vedendo il Dhamma, non mi vede. ",
   "iti92:3.1": "Un cercatore potrebbe stare a cento yojana di distanza, ",
