--- a/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti92:2.2": "se è smanioso... ",
   "iti92:2.3": "allora sarà lontano da me e io da esso. ",
   "iti92:2.4": "Perché questo? ",
-  "iti92:2.5": "Perchè quel cercatore non vede il Dhamma. ",
+  "iti92:2.5": "Perché quel cercatore non vede il Dhamma. ",
   "iti92:2.6": "E non vedendo il Dhamma, non mi vede. ",
   "iti92:3.1": "Un cercatore potrebbe stare a cento yojana di distanza, ",
   "iti92:3.2": "ma se non è smanioso... ",
