--- a/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti92:2.6": "E non vedendo il Dhamma, non mi vede. ",
   "iti92:3.1": "Un cercatore potrebbe stare a cento yojana di distanza, ",
   "iti92:3.2": "ma se non è smanioso... ",
-  "iti92:3.3": "allora sarà vicino a me, e io da esso. ",
+  "iti92:3.3": "allora sarà vicino a me e io da esso. ",
   "iti92:3.4": "Perchè questo? ",
   "iti92:3.5": "Perchè quel cercatore vede il Dhamma. ",
   "iti92:3.6": "E vedendo il Dhamma, mi vede. ",
