--- a/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti92:3.3": "allora sarà vicino a me e io a lui. ",
   "iti92:3.4": "Perchè questo? ",
   "iti92:3.5": "Perchè quel cercatore vede il Dhamma. ",
-  "iti92:3.6": "E vedendo il Dhamma, mi vede. ",
+  "iti92:3.6": "E vedendo il Dhamma mi vede. ",
   "iti92:4.1": "Anche se mi segue, uno che rimane ",
   "iti92:4.2": "ingordo e avverso, è come ",
   "iti92:4.3": "il perturbato dall’imperturbabile, ",
