--- a/translation/de/sabbamitta/sutta/an/an2/an2.32-41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.32-41_translation-de-sabbamitta.json
@@ -42,7 +42,7 @@
   "an2.35:2.2": "Und der Heilige, der Lehrer, fuhr fort: ",
   "an2.35:3.1": "„In dieser Welt sind der der Schulung Entwachsene und der in Schulung Befindliche ",
   "an2.35:3.2": "einer den Göttern gewidmeten Gabe würdig. ",
-  "an2.35:3.3": "Sie sind aufrecht ",
+  "an2.35:3.3": "Sie sind aufrichtig ",
   "an2.35:3.4": "mit Körper, Sprache und Geist. ",
   "an2.35:3.5": "Das ist das Feld für Opferspender – ",
   "an2.35:3.6": "was hier gespendet wird, ist äußerst fruchtbar.“ ",
