--- a/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
@@ -83,7 +83,7 @@
   "an3.70:10.1": "Ein verunreinigter Geist wird geläutert, indem man Mühe aufwendet. ",
   "an3.70:10.2": "Und wie läutert man einen verunreinigten Geist, indem man Mühe aufwendet? ",
   "an3.70:10.3": "Da besinnt sich ein edler Schüler auf den Saṅgha: ",
-  "an3.70:10.4": "‚Der Saṅgha der Schüler des Buddha übt nach dem guten Weg, dem geraden Weg, dem systematischen Weg, dem Weg des richtigen Vorgehens. Er besteht aus den vier Paaren, den acht Personen. Das ist der Saṅgha der Schüler des Buddha, und er ist einer den Göttern gewidmeten Gabe würdig, der Gastfreundschaft würdig, einer religiösen Gabe würdig, des Grußes mit zusammengelegten Händen würdig und ist das unübertreffliche Feld für Verdienst für die Welt.‘ ",
+  "an3.70:10.4": "‚Der Saṅgha der Schüler des Buddha übt nach dem guten Weg, dem aufrichtigen Weg, dem systematischen Weg, dem Weg des richtigen Vorgehens. Er besteht aus den vier Paaren, den acht Personen. Das ist der Saṅgha der Schüler des Buddha, und er ist einer den Göttern gewidmeten Gabe würdig, der Gastfreundschaft würdig, einer religiösen Gabe würdig, des Grußes mit zusammengelegten Händen würdig und ist das unübertreffliche Feld für Verdienst für die Welt.‘ ",
   "an3.70:10.5": "Während er sich auf den Saṅgha besinnt, wird sein Geist klar, Freude kommt auf und die Verunreinigungen des Geistes lösen sich auf. Es ist, wie wenn man ein schmutziges Kleid wäscht, indem man Mühe aufwendet. ",
   "an3.70:11.1": "Und wie wäscht man ein schmutziges Kleid, indem man Mühe aufwendet? ",
   "an3.70:11.2": "Mit Salz, Lauge, Kuhmist und Wasser und indem man die entsprechende Mühe aufwendet. ",
