--- a/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti92:2.1": "“Cercatori, anche se un cercatore afferrando l’angolo del mio saio, mi seguisse standomi dietro passo dopo passo, ",
+  "iti92:2.1": "“Cercatori, anche se un cercatore afferrasse un angolo del mio saio e mi seguisse passo dopo passo, ",
   "iti92:2.2": "se è smanioso... ",
   "iti92:2.3": "allora sarà lontano da me e io da lui. ",
   "iti92:2.4": "Perché questo? ",
