--- a/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti92:2.1": "“Cercatori, anche se un cercatore afferrasse un angolo del mio saio e mi seguisse passo dopo passo, ",
   "iti92:2.2": "se è smanioso... ",
-  "iti92:2.3": "allora sarà lontano da me e io da lui. ",
+  "iti92:2.3": "allora sarà lontano da me e anch’io da lui. ",
   "iti92:2.4": "Perché questo? ",
   "iti92:2.5": "Perché quel cercatore non vede il Dhamma. ",
   "iti92:2.6": "E non vedendo il Dhamma, non mi vede. ",
