--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti93:2.3": "Il fuoco della passione, il fuoco dell’odio e il fuoco dell’illusione. ",
   "iti93:3.1": "Il fuoco della passione brucia i mortali ",
   "iti93:3.2": "fissati e infatuati con i piaceri dei sensi. ",
-  "iti93:3.3": "Il fuoco dell’odio brucia le persone  ostili (malevolenti)* ",
+  "iti93:3.3": "Il fuoco dell’odio brucia le persone  malevolenti (ostili)* ",
   "iti93:3.4": "che uccidono gli esseri senzienti, ",
   "iti93:4.1": "e il fuoco dell’illusione brucia i confusi ",
   "iti93:4.2": "che non sono esperti del Dhamma dei nobili. ",
