--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -219,7 +219,7 @@
   "dn33:1.10.126": "Drei Arten von Abgeklärtheit: ",
   "dn33:1.10.127": "Abgeklärtheit in Bezug auf den Körper, die Sprache und den Geist. ",
   "dn33:1.10.128": "In drei Dingen bewandert sein: ",
-  "dn33:1.10.129": "Geschick für Fortschritt, Geschick für Rückschritt und Geschick für die richtigen Mittel. ",
+  "dn33:1.10.129": "Im Fortschritt, im Rückschritt und in den richtigen Mitteln. ",
   "dn33:1.10.130": "Drei Eitelkeiten: ",
   "dn33:1.10.131": "die Eitelkeit der Jugend, die Eitelkeit der Gesundheit und die Eitelkeit des Lebens. ",
   "dn33:1.10.132": "Drei Dinge, denen gegenüber man sich in die Pflicht nehmen soll: ",
