--- a/translation/de/sabbamitta/sutta/kn/dhp/dhp179-196_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/dhp/dhp179-196_translation-de-sabbamitta.json
@@ -60,7 +60,7 @@
   "dhp192:2": "sie ist die höchste Zuflucht. ",
   "dhp192:3": "Wenn man zu ihr Zuflucht nimmt, ",
   "dhp192:4": "wird man von allem Leiden erlöst. ",
-  "dhp193:1": "Es ist schwer, einen Vollblutmenschen zu finden, ",
+  "dhp193:1": "Es ist schwer, einen Vollblutmenschen zu finden: ",
   "dhp193:2": "sie werden nicht überall geboren. ",
   "dhp193:3": "Eine Familie, in der ein Bedächtiger geboren wird, ",
   "dhp193:4": "gedeiht im Glück. ",
