--- a/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
@@ -224,7 +224,7 @@
   "thig16.1:55.4": "Denk an die vier edlen Wahrheiten! ",
   "thig16.1:56.1": "Wenn die Unsterblichkeit zu finden ist, ",
   "thig16.1:56.2": "warum solltest du die fünf bitteren Gifte trinken? ",
-  "thig16.1:56.3": "Denn jedes Genießen von Sinnenfreuden ",
+  "thig16.1:56.3": "Denn jede erotische Wonne ",
   "thig16.1:56.4": "ist so viel bitterer als sie. ",
   "thig16.1:57.1": "Wenn die Unsterblichkeit zu finden ist, ",
   "thig16.1:57.2": "warum solltest du nach Sinnenfreuden brennen? ",
