--- a/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
@@ -228,7 +228,7 @@
   "thig16.1:56.4": "ist so viel bitterer als sie. ",
   "thig16.1:57.1": "Wenn die Unsterblichkeit zu finden ist, ",
   "thig16.1:57.2": "warum solltest du nach Sinnenfreuden brennen? ",
-  "thig16.1:57.3": "Denn jedes Genießen von Sinnenfreuden ",
+  "thig16.1:57.3": "Denn erotische Wonne ",
   "thig16.1:57.4": "brennt, kocht, wallt und siedet. ",
   "thig16.1:58.1": "Wenn es Freiheit von Feindschaft gibt, ",
   "thig16.1:58.2": "warum solltest du deinen Feind, die Sinnenfreuden, wollen? ",
