--- a/translation/de/sabbamitta/sutta/kn/thig/thig6.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig6.3_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "thig6.3:2.4": "und habe sinnliches Verlangen ausgerottet. ",
   "thig6.3:3.1": "Sinnenfreuden sind wie Schwerter und Lanzen, ",
   "thig6.3:3.2": "die Aggregate sind der Hackklotz dazu. ",
-  "thig6.3:3.3": "Was du sinnliches Vergnügen nennst, ",
+  "thig6.3:3.3": "Was du erotische Wonne nennst, ",
   "thig6.3:3.4": "ist für mich nun Quelle des Widerwillens. ",
   "thig6.3:4.1": "Genießen ist in jeder Hinsicht zerstört, ",
   "thig6.3:4.2": "und die Masse der Dunkelheit ist zerschmettert. ",
