--- a/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
@@ -64,7 +64,7 @@
   "thig14.1:15.4": "dass du mich so verrückt anstarrst?“ ",
   "thig14.1:16.1": "„Deine Augen sind wie die eines Rehs ",
   "thig14.1:16.2": "oder wie die einer Fee in den Bergen; ",
-  "thig14.1:16.3": "wenn ich sie sehe, ",
+  "thig14.1:16.3": "wenn ich sie sehe, steigert sich ",
   "thig14.1:16.4": "steigert sich meine sinnliche Begierde immer mehr. ",
   "thig14.1:17.1": "Deine Augen sind wie blaue Lilienknospen ",
   "thig14.1:17.2": "in deinem fleckenlosen Antlitz wie von funkelndem Gold. ",
