--- a/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
@@ -69,7 +69,7 @@
   "thig14.1:17.1": "Deine Augen sind wie blaue Lilienknospen ",
   "thig14.1:17.2": "in deinem fleckenlosen Antlitz wie von funkelndem Gold. ",
   "thig14.1:17.3": "Wenn ich sie sehe, steigert sich ",
-  "thig14.1:17.4": "meine sinnliche Erregung immer mehr. ",
+  "thig14.1:17.4": "die sinnliche Erregung in mir immer mehr. ",
   "thig14.1:18.1": "Auch wenn du weit fortgehst, werde ich doch an dich denken, ",
   "thig14.1:18.2": "an dich mit den langen Wimpern und dem klaren Blick. ",
   "thig14.1:18.3": "Keine Augen liebe ich mehr als deine, ",
