--- a/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
@@ -65,7 +65,7 @@
   "thig14.1:16.1": "„Deine Augen sind wie die eines Rehs ",
   "thig14.1:16.2": "oder wie die einer Fee in den Bergen; ",
   "thig14.1:16.3": "wenn ich sie sehe, schwillt die erotische Wonne ",
-  "thig14.1:16.4": "in mir immer mehr an. ",
+  "thig14.1:16.4": "in mir umso mehr an. ",
   "thig14.1:17.1": "Deine Augen sind wie blaue Lilienknospen ",
   "thig14.1:17.2": "in deinem fleckenlosen Antlitz wie von funkelndem Gold. ",
   "thig14.1:17.3": "Wenn ich sie sehe, schwillt die sinnliche Erregung ",
