--- a/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
@@ -112,7 +112,7 @@
   "thig14.1:27.4": "Woran könnte man den Geist festmachen? ",
   "thig14.1:28.1": "Als hättest du ein Bild gesehen, ",
   "thig14.1:28.2": "mit Gelb auf eine Wand gemalt, ",
-  "thig14.1:28.3": "und dein Blick wird verwirrt ",
+  "thig14.1:28.3": "und deine Sicht wäre davon getäuscht – ",
   "thig14.1:28.4": "und nimmt es fälschlich als einen Menschen wahr. ",
   "thig14.1:29.1": "Obwohl es wertlos ist wie ein Zaubertrick ",
   "thig14.1:29.2": "oder ein goldener Baum, den man im Traum sieht, ",
