--- a/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
@@ -225,7 +225,7 @@
   "thig16.1:56.1": "Wenn die Unsterblichkeit zu finden ist, ",
   "thig16.1:56.2": "warum solltest du die fünf bitteren Gifte trinken? ",
   "thig16.1:56.3": "Denn alle erotischen Wonnen ",
-  "thig16.1:56.4": "ist so viel bitterer als sie. ",
+  "thig16.1:56.4": "sind so viel bitterer als sie. ",
   "thig16.1:57.1": "Wenn die Unsterblichkeit zu finden ist, ",
   "thig16.1:57.2": "warum solltest du nach Sinnenfreuden brennen? ",
   "thig16.1:57.3": "Denn erotische Wonne ",
