--- a/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
@@ -229,7 +229,7 @@
   "thig16.1:57.1": "Wenn die Unsterblichkeit zu finden ist, ",
   "thig16.1:57.2": "warum solltest du nach Sinnenfreuden brennen? ",
   "thig16.1:57.3": "Denn alle erotischen Wonnen ",
-  "thig16.1:57.4": "brennt, kocht, wallt und siedet. ",
+  "thig16.1:57.4": "brennen, kochen, wallen und siedeen. ",
   "thig16.1:58.1": "Wenn es Freiheit von Feindschaft gibt, ",
   "thig16.1:58.2": "warum solltest du deinen Feind, die Sinnenfreuden, wollen? ",
   "thig16.1:58.3": "So wie Könige, Feuer, Räuber, Wasser und ungeliebte Menschen ",
