--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti93:3.3": "Il fuoco dell’odio brucia le persone  malevolenti (ostili)* ",
   "iti93:3.4": "che uccidono gli esseri senzienti. ",
   "iti93:4.1": "Il fuoco dell’illusione brucia i confusi ",
-  "iti93:4.2": "che non sono esperti del Dhamma dei nobili. ",
+  "iti93:4.2": "che nel Dhamma dei nobili sono ottusi. ",
   "iti93:4.3": "Ignoranti di questi fuochi ",
   "iti93:4.4": "le persone si godono la vita ",
   "iti93:5.1": "per poi riempire l'inferno, ",
