--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti93:3.4": "che uccidono gli esseri senzienti. ",
   "iti93:4.1": "Il fuoco dell’illusione brucia i confusi ",
   "iti93:4.2": "che nel Dhamma dei nobili sono ottusi. ",
-  "iti93:4.3": "Ignoranti di questi fuochi ",
+  "iti93:4.3": "Non conoscento questi fuochi ",
   "iti93:4.4": "le persone si godono la vita ",
   "iti93:5.1": "per poi riempire l'inferno, ",
   "iti93:5.2": "e rinascere come animali, ",
