--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti93:4.2": "che nel Dhamma dei nobili sono ottusi. ",
   "iti93:4.3": "Non conoscendo questi fuochi ",
   "iti93:4.4": "le persone, godendosi la propria esistenza, ",
-  "iti93:5.1": "per poi riempire l'inferno, ",
+  "iti93:5.1": "riempiono l'inferno, ",
   "iti93:5.2": "e rinascere come animali, ",
   "iti93:5.3": "come asuras, o nel reame dei Peta (fantasmi), ",
   "iti93:5.4": "prigionieri sotto il giogo di Māra. ",
