--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti93:4.4": "le persone, dopo essersi gioduta la propria esistenza, ",
   "iti93:5.1": "riempiono l’inferno ",
   "iti93:5.2": "o rinascono come animali, ",
-  "iti93:5.3": "come asura, nel reame dei peta (fantasmi), ",
+  "iti93:5.3": "come asura, come peta (fantasmi), ",
   "iti93:5.4": "prigionieri sotto il giogo di Māra. ",
   "iti93:6.1": "Ma quelli che passano giorno e notte dediti ",
   "iti93:6.2": "all’insegnamento del Buddha perfettamente risvegliato, ",
