--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti93:4.3": "Le persone che non conoscono questi fuochi, ",
   "iti93:4.4": "godutasi la propria esistenza, ",
   "iti93:5.1": "riempiono l’inferno ",
-  "iti93:5.2": "o rinascono come animali, ",
+  "iti93:5.2": "rinascono come animali, ",
   "iti93:5.3": "come asura, come peta (fantasmi), ",
   "iti93:5.4": "prigionieri sotto il giogo di Māra. ",
   "iti93:6.1": "Ma quelli che passano giorno e notte dediti ",
