--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -17,7 +17,7 @@
   "iti93:6.1": "Ma quelli che passano giorno e notte dediti ",
   "iti93:6.2": "all’insegnamento del Buddha perfettamente risvegliato, ",
   "iti93:6.3": "estinguono per sempre il fuoco della passione ",
-  "iti93:6.4": "con la percezione del non bello. ",
+  "iti93:6.4": "usando il non bello come percezione (con la percezione del non bello). ",
   "iti93:7.1": "Gli esseri umani superiori estinguono ",
   "iti93:7.2": "il fuoco dell’odio con l’amore, ",
   "iti93:7.3": "e il fuoco dell’illusione con la saggezza ",
