--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -21,7 +21,7 @@
   "iti93:7.1": "Gli esseri umani superiori estinguono ",
   "iti93:7.2": "il fuoco dell’odio con l’amore, ",
   "iti93:7.3": "e il fuoco dell’illusione con quella saggezza ",
-  "iti93:7.4": "che conduce verso l’acume (nibbedha). ",
+  "iti93:7.4": "che conduce verso l’acutezza (nibbedha). ",
   "iti93:8.1": "Gli avveduti che hanno estinto i fuochi, ",
   "iti93:8.2": "** impegnandosi senza tregua, di giorno e di notte. ",
   "iti93:8.3": "hanno raggiunto il completo parinibbāna, ",
