--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti93:4.2": "che nel Dhamma dei nobili sono ottusi. ",
   "iti93:4.3": "Non conoscono questi fuochi ",
   "iti93:4.4": "quelle persone che si deliziano di una propria essenza. ",
-  "iti93:5.1": "riempiono l’inferno, ",
+  "iti93:5.1": "Riempiono l’inferno, ",
   "iti93:5.2": "rinascono come animali, ",
   "iti93:5.3": "come titani (asura) o come spettri (peta), ",
   "iti93:5.4": "prigionieri sotto il giogo di Māra. ",
