--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti93:4.2": "che nel Dhamma dei nobili sono ottusi. ",
   "iti93:4.3": "Non conoscendo questi fuochi, ",
   "iti93:4.4": "deliziandosi di una propria essenza, ",
-  "iti93:5.1": "riempiono l’inferno, ",
+  "iti93:5.1": "le persone riempiono l’inferno, ",
   "iti93:5.2": "rinascono come animali, ",
   "iti93:5.3": "come spettri (peta) o come titani (asura), ",
   "iti93:5.4": "prigionieri sotto il giogo di Māra. ",
