--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -18,7 +18,7 @@
   "iti93:6.2": "all’insegnamento del Buddha, perfettamente risvegliato, ",
   "iti93:6.3": "estinguono per sempre il fuoco della passione ",
   "iti93:6.4": "usando il non bello come percezione (con la percezione del non bello). ",
-  "iti93:7.1": "L’essere umani superiore estingue ",
+  "iti93:7.1": "L’essere umano superiore estingue ",
   "iti93:7.2": "il fuoco dell’odio con l’amore, ",
   "iti93:7.3": "e il fuoco dell’illusione con quella saggezza ",
   "iti93:7.4": "che conduce verso l’acutezza (nibbedha). ",
