--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -25,7 +25,7 @@
   "iti93:8.1": "Quegli avveduti che hanno estinto i fuochi, ",
   "iti93:8.2": "senza tregua, di giorno e di notte, ",
   "iti93:8.3": "hanno raggiunto totale refrigerio (parinibbāna), ",
-  "iti93:8.4": "hanno completamente trasceso la sofferenza. ",
+  "iti93:8.4": "hanno trasceso la sofferenza senza residuo. ",
   "iti93:9.1": "I saggi dalla somma sapienza, che vedono ciò che è nobile, ",
   "iti93:9.2": "comprendendo correttamente (nel modo giusto ), ",
   "iti93:9.3": "con la conoscenza superiore della distruzione della nascita, ",
