--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -22,7 +22,7 @@
   "iti93:7.2": "il fuoco dell’odio con l’amore ",
   "iti93:7.3": "e il fuoco dell’illusione con quella saggezza ",
   "iti93:7.4": "che conduce verso l’acutezza (nibbedha). ",
-  "iti93:8.1": "Avendo soffiato via i fuochi, quegli avveduti ",
+  "iti93:8.1": "Avendo soffiato via i fuochi, quegli avveduti, ",
   "iti93:8.2": "assidui giorno e notte, ",
   "iti93:8.3": "raggiungono il totale refrigerio (parinibbāna) ",
   "iti93:8.4": "e trascendono la sofferenza senza residui. ",
