--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "mn79:8.6": "‚Aber Udāyī, lass die Vergangenheit und die Zukunft beiseite. ",
   "mn79:8.7": "Ich will dich den Dhamma lehren: ",
   "mn79:8.8": "„Wenn dieses besteht, ist jenes; aufgrund des Entstehens von diesem entsteht jenes. ",
-  "mn79:8.9": "Wenn dieses nicht besteht, ist jenes nicht; aufgrund des Aufhörens von diesem hört jenes auf.“‘ Aber das ist mir noch weniger klar. "
+  "mn79:8.9": "Wenn dieses nicht besteht, ist jenes nicht; aufgrund des Aufhörens von diesem hört jenes auf.“‘ Aber das ist mir noch weniger klar. ",
+  "mn79:8.10": "Vielleicht kann ich den Buddha zufriedenstellen, indem ich eine Frage über meine eigene Tradition beantworte.“ "
 }
