--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -61,5 +61,5 @@
   "mn79:8.9": "Wenn dieses nicht besteht, ist jenes nicht; aufgrund des Aufhörens von diesem hört jenes auf.“‘ Aber das ist mir noch weniger klar. ",
   "mn79:8.10": "Vielleicht kann ich den Buddha zufriedenstellen, indem ich eine Frage über meine eigene Tradition beantworte.“ ",
   "mn79:9.1": "„Aber Udāyī, was ist deine eigene Tradition?“ ",
-  "mn79:9.2": "„Herr, sie ist das: "
+  "mn79:9.2": "„Herr, sie ist dies: "
 }
