--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -62,5 +62,6 @@
   "mn79:8.10": "Vielleicht kann ich den Buddha zufriedenstellen, indem ich eine Frage über meine eigene Tradition beantworte.“ ",
   "mn79:9.1": "„Aber Udāyī, was ist deine eigene Tradition?“ ",
   "mn79:9.2": "„Herr, sie ist dies: ",
-  "mn79:9.3": "‚Das ist die höchste Herrlichkeit, das ist die höchste Herrlichkeit.‘“ "
+  "mn79:9.3": "‚Das ist die höchste Herrlichkeit, das ist die höchste Herrlichkeit.‘“ ",
+  "mn79:9.4": "„Aber was ist diese höchste Herrlichkeit?“ "
 }
