--- a/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
@@ -28,7 +28,7 @@
   "iti89:8.2": "con le parole il Buddha ",
   "iti89:8.3": "che pratica bene e ha il cuore sereno, ",
   "iti89:8.4": "l’offesa non attecchisce. ",
-  "iti89:9.1": "Il saggio dovrebbe trovarsi un amico spirituale di questo tipo ",
+  "iti89:9.1": "Il saggio dovrebbe trovarsi un amico di questo tipo ",
   "iti89:9.2": "e andargli dietro passo passo. ",
   "iti89:9.3": "Il cercatore che segue la via, ",
   "iti89:9.4": "raggiunge la distruzione della sofferenza.” "
